maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:101: error: illegal start of simple expression
  var indications:Array[Int]=[getIndication(getX()-1,getY()),
                             ^